.kube/02-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interactions-api
  namespace: interactions
spec:
  replicas: 3
  selector:
    matchLabels:
      app: interactions-api
  template:
    metadata:
      labels:
        app: interactions-api
    spec:
      containers:
      - name: interactions-api
        image: aksmex01.azurecr.io/interactions:api
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
