.kube/03-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: interactions-api
  namespace: interactions
spec:
  selector:
    app: interactions-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
