.kube/04-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interactions-api-ingress
  namespace: interactions
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.interactions.itexico.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: interactions-api
            port:
              number: 80
  tls:
  - hosts:
      - api.interactions.itexico.com
    secretName: api-interactions-itexico-com-tls
